# WEB-HW7

./: .gitignore  my_select.py  pyproject.toml  seed.py
migrations/: env.py
migrations/versions/: b514e8f927d6_init.py
src/: db.py  models.py
